@@ -1,0 +1,25 @@
+// Code generated by sqlc. DO NOT EDIT.
+// versions:
+//   sqlc v1.16.0
+// source: feedback.sql
+
+package generated
+
+import (
+	"context"
+)
+
+const createFeedback = `-- name: CreateFeedback :exec
+INSERT INTO "Feedbacks" ("user_id", "type", "content") VALUES ($1, $2, $3)
+`
+
+type CreateFeedbackParams struct {
+	UserID  int64  `json:"user_id"`
+	Type    string `json:"type"`
+	Content string `json:"content"`
+}
+
+func (q *Queries) CreateFeedback(ctx context.Context, arg CreateFeedbackParams) error {
+	_, err := q.db.ExecContext(ctx, createFeedback, arg.UserID, arg.Type, arg.Content)
+	return err
+}
